[package]
name = "r2dt-utils"
version = "0.1.0"
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
edition = "2018"

[dependencies]
csv = "1.1"
quick-xml = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2"
walkdir = "2"
globset = "0.3"
indexmap = "1.5.0"
