[package]
name = "r2dt-utils"
version = "0.1.0"
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
csv = "1.1"
globset = "0.3"
log = "0.4"
quick-xml = "0.18.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.4.0"
serde_json = "1.0"
simplelog = "^0.7.6"
structopt = "0.3"
walkdir = "2"
regex = "1"
lazy_static = "1.4.0"
flate2 = "1.0.16"
hex = "0.4.2"
